After CMF 1.6.4

  Bug Fixes

    - DCWorkflow.exportimport: Scripts with invalid types imported
      after scripts with valid types will no longer place the valid
      script twice.  Scripts can also now be specified with meta_types
      other than the hard-coded meta_types.

    - CMFCore.CMFBTreeFolder: CMFBTreeFolders could not be used as the
      toplevel /Members container. 
      (http://www.zope.org/Collectors/CMF/441)

    - CMFCore.WorkflowTool: Using the '(Default)' keyword for a type's 
      workflow chain will now reset any custom workflow chains for the type
      (http://www.zope.org/Collectors/CMF/475)

    - User folders not supporting the userFolderDelUsers API, such as PAS,
      would raise an unhelpful error when members were deleted using the
      portal_membership tool.
      (http://www.zope.org/Collectors/CMF/481)

    - Backported test fix from 2.1 branch which suppresses race conditions
      in date-based topic criteria tests.

CMF 1.6.4 (2007/05/15):

  (No changes since 1.6.4-beta)

CMF 1.6.4-beta (2007/04/24):

  Other Changes

    - Switch to using GenericSetup 1.2 final release (From 1.2beta).

  Bug Fixes

    - Fixed test breakage / spew when running on Zope 2.8.

    - Use the property API to get the member specific skin, because
      direct attribute access won't work with PAS based membership.
      (http://dev.plone.org/plone/ticket/5904)

    - Add POST-only protections to security critical methods (see
      http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2007-0240).

    - Fixed DST-driven test breakage in CMFCalendar by adding an optional
      'zone' argument to the DublineCore methods which return string
      rednitions of date metadata.
      (http://www.zope.org/Collectors/CMF/476)

CMF 1.6.3 (2007/02/02)

  Bug Fixes
  
    - Fixed broken PUT handling for CMFCalendar Events
      (http://www.zope.org/Collectors/CMF/458)

CMF 1.6.3-beta (2007/01/17)

  Bug Fixes
